finish responsive for about page and arabic english language with direction

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -27,10 +27,14 @@
       "buttonText": "اقرأ المزيد"
     }
   },
+  "subHeroTitle": "مجموعة كبور الدولية",
+  "subHeroDesc": "شركة رائدة في إنتاج وتصنيع وتوزيع المتة على مستوى سوريا والوطن العربي، لها معامل في الأرجنتين وسوريا وتتبع أعلى درجات التعقيم وتستخدم التكنولوجيا لإنتاج أفضل مشروب",
   "BrandTitle":"ماركاتنا",
   "ProductsCollectionsTitle": "مجموعات المواد",
   "AboutTitle": "عن الشركة",
   "StudiesOnMateTitle" : "دراسات عن المتة",
+  "mateArriveTitle": "كيف تصل المتة إليك؟",
+  "mateArriveDesc": "تمر المتة ابتداءً من زراعتها وقطافها وحتى وصولها للمستهلك بسلسلة طويلة من المراحل لتحصل بنتيجتها على المنتج النهائي لأفضل مشروب.",
   "language": "اللغة",
   "about": {
     "factory": {
@@ -754,5 +758,78 @@
     "email": "البريد الإلكتروني *",
     "message": "الرسالة *",
     "send": "إرسال"
+  },
+  "mateProcess": {
+    "phase1": {
+      "title": "مزارع شركة كبور الدولية",
+      "desc": "تقع أراضي مجموعة كبور الدولية في شمال إقليم ميسيونيس في الأرجنتين، بالقرب من بلدة كومندانتي أندرسيتو."
+    },
+    "phase2": {
+      "title": "قطف المتة",
+      "desc": "أوراق المتة المقطوفة يتم تجفيفها في عدة مراحل للحصول على رطوبة منخفضة، وذلك للحفاظ على نوعية جيدة ودون أن تفقد من خصائصها."
+    },
+    "phase3": {
+      "title": "سابيكو",
+      "desc": "يتم دخول الورق الأخضر إلى سابيكو وتوجه النار مباشرة على المتة لقتل أنزيم التخمر بدرجة حرارة عالية تصل إلى 400 درجة ولمدة دقيقة واحدة."
+    },
+    "phase4": {
+      "title": "بريسيكو",
+      "desc": "في هذه المرحلة يتم إعادة عملية السابيكو بدرجة حرارة أقل بـ 30% من السابيكو."
+    },
+    "phase5": {
+      "title": "سنتا 1 و 2",
+      "desc": "تمر المتة بعد الخروج من البريسيكو ضمن بناء مغلق (سنتا) بدرجة حرارة 80 إلى 100 درجة مئوية لمدة 10 ساعات ليتم تنشيف الورق والعيدان."
+    },
+    "phase6": {
+      "title": "كنشدورا ونوكي",
+      "desc": "تدخل المتة إلى الكنشدورا ويتم تقطيعها بشكل خشن وتدعى الأوراق الناتجة عنها بالكانشادا. بعدها يتم فصل العيدان عن الأوراق بمرحلة النوكي ثم توضع لمدة سنة في مستودع الترييح."
+    },
+    "phase7": {
+      "title": "المستودعات",
+      "desc": "بعد الانتهاء من تجفيف المتة يتم وضعها في مستودع الترييح لمدة عام."
+    },
+    "phase8": {
+      "title": "المطحنة",
+      "desc": "بعد خروج المتة من مستودع الترييح يتم طحن المتة المجففة وتعبئتها."
+    },
+    "phase9": {
+      "title": "التعبئة والشحن",
+      "desc": "يتم شحن المتة بحراً إلى سوريا، حيث تمر أيضاً بعدة مراحل حتى وصولها إلى المستهلك."
+    },
+    "phase11": {
+      "title": "وصول الحاويات",
+      "desc": "ترد أكياس المتة الخامية من الميناء ضمن حاويات معدنية محكمة الإغلاق."
+    },
+    "phase12": {
+      "title": "فرز المتة",
+      "desc": "يتم تعبئة المتة ضمن عبوات ورقية عازلة للرطوبة والرائحة، التعبئة آلية بالكامل لا تمسها الأيدي مع مراعاة كافة الشروط الصحية."
+    },
+    "phase13": {
+      "title": "التعبئة",
+      "desc": "يتم تعبئة المتة ضمن عبوات ورقية عازلة للرطوبة والرائحة، التعبئة آلية بالكامل لا تمسها الأيدي مع مراعاة كافة الشروط الصحية."
+    }
+  },
+  "history": {
+    "phase1": {
+      "desc": "تم إنشاء معمل لتحضير وتعبئة المتة في سوريا - منطقة يبرود."
+    },
+    "phase2": {
+      "desc": "تم تأسيس معمل لتعبئة مختلف أنواع الشاي المستورد من سيريلانكا والهند والصين وكينيا."
+    },
+    "phase3": {
+      "desc": "تم التحضير لإنشاء مشروع استراتيجي في الأرجنتين لزراعة وتجفيف وطحن المتة وتصديرها إلى سوريا وهي الآن من الشركات الرائدة في الأرجنتين."
+    },
+    "phase4": {
+      "desc": "قامت مجموعة كبور الدولية بعام 2009 بإنتاج وتعبئة الأعشاب الطبية باسم كامبو بعد تعقيمها وتنقيتها من الشوائب."
+    },
+    "phase5": {
+      "desc": "تم التوسع بالمنتجات لتشمل مختلف أنواع المشروبات الساخنة (المساحيق)."
+    },
+    "phase6": {
+      "desc": "قمنا بالتوسع في منتجاتنا لتشمل الخلطات الطبية المرخصة من قبل وزارة الصحة السورية، وهذه الخلطات تم وضعها بإشراف صيدلاني بأسس علمية بالاستعانة بالعديد من المراجع الطبية."
+    },
+    "phase7": {
+      "desc": "أضيفت القهوة إلى عائلة منتجات شركة كبور عام 2021."
+    }
   }
 }
