finish filter of product and event pages

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1788,40 +1788,107 @@
     "event-type": {
       "title": "نوع الحدث",
       "options": [
-        "معارض",
-        "مؤتمرات طبية",
-        "فعاليات إنسانية",
-        "فعاليات اجتماعية"
+        {
+          "id" : "1",
+          "name": "معارض"
+        },
+        {
+          "id" : "2",
+          "name": "مؤتمرات طبية"
+        },
+        {
+          "id" : "3",
+          "name": "فعاليات إنسانية"
+        },
+        {
+          "id" : "4",
+          "name": "فعاليات اجتماعية"
+        }
       ]
     },
     "product-type": {
       "title": "نوع المنتج",
       "options": [
-        "متة",
-        "شاي أسود",
-        "شاي أخضر",
-        "أعشاب طبيعية",
-        "خلطات طبية",
-        "عصير",
-        "قهوة",
-        "مشروبات ساخنة",
-        "بسكويت",
-        "حليب"
+        {
+          "id" : "1",
+          "name": "متة"
+        },
+        {
+          "id" : "2",
+          "name": "شاي أسود"
+        },
+        {
+          "id" : "3",
+          "name": "شاي أخضر"
+        },
+        {
+          "id" : "4",
+          "name": "أعشاب طبيعية"
+        }
+        ,{
+          "id" : "5",
+          "name": "خلطات طبية"
+        },{
+          "id" : "6",
+          "name": "عصير"
+        },{
+          "id" : "7",
+          "name": "قهوة"
+        },{
+          "id" : "8",
+          "name": "مشروبات ساخنة"
+        },{
+          "id" : "9",
+          "name": "بسكويت"
+        },{
+          "id" : "10",
+          "name": "حليب"
+        }
       ]
     },
     "trademark": {
       "title": "العلامة التجارية",
       "options": [
-        "Campo",
-        "Kharta",
-        "Sabrosa",
-        "Pipore",
-        "Cruz de Malta",
-        "Amanda",
-        "Sobrina",
-        "Campo Verde",
-        "Agua",
-        "Nopio"
+        {
+          "id" : "1",
+          "name": "Campo"
+        },
+        {
+          "id" : "2",
+          "name": "Kharta"
+        },
+        {
+          "id" : "3",
+          "name": "Sabrosa"
+        },
+        {
+          "id" : "4",
+          "name": "Pipore"
+        },
+        {
+          "id" : "5",
+          "name": "Cruz de Malta"
+        },
+        {
+          "id" : "6",
+          "name": "Amanda"
+        },
+        {
+          "id" : "7",
+          "name": "Sobrina"
+        },
+        {
+          "id" : "8",
+          "name": "Campo Verde"
+        },
+        {
+          "id" : "9",
+          "name": "Agua"
+        },
+        {
+          "id" : "10",
+          "name": "Nopio"
+        }
       ]
     }
   },
