--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -184,7 +184,7 @@
   "productDetails": "تفاصيل المنتج",
   "product": {
     "1": {
-      "name": "خارطة خضراء",
+      "name": "خارطة",
       "desc": "أعشاب ونباتات كامبو من أجود أنواع الأعشاب ومطابقة للمواصفات القياسية، طبيعية 100% ، لا تحوي على منكهات صناعية، معقمة بأشعة (UV)  تحت إشراف صيدلاني مخبري.",
       "details":{
         "descTitle": "الوصف",
@@ -236,7 +236,7 @@
       }
     },
     "2": {
-      "name": "خارطة بيضاء",
+      "name": "بيبوري",
       "desc": "هذا نص عربي تجريبي يصف المنتج الثاني.",
             "details":{
         "descTitle": "الوصف",
@@ -1695,6 +1695,110 @@
       "name": "مليسة",
       "desc": "هذا نص عربي تجريبي يصف المنتج الرابع.",
       "details":{
+        "descTitle": "الوصف",
+        "desc" : [
+          "يُعتبر مشروب الزهورات من أفضل المشروبات التي تحمي من نزلات البرد والإنفلونزا والسعال الذي يزداد في فصل الشتاء.",
+          "كما أنه يُساعد على طرد السموم من الجسم، ويقوي جهاز المناعة، ويُخفف الصداع، ويُزيل الانتفاخ، ويُساعد على الهضم."
+        ],
+        "IngredientsTitle": "المكونات",
+        "Ingredients": [
+          "ورد جوري",
+          "مليسة",
+          "نعنع فلفلي",
+          "متة",
+          "زهرة الربيع",
+          "بابونج",
+          "شاي أخضر"
+        ],
+        "usageInstructionsTitle": "طريقة التحضير",
+        "usageInstructions": [
+          "للحفاظ على نكهته المميزة، ضع كيسًا من الكامبو (زهورات طبيعية) في كوب سعة 250 مل، ثم صب الماء المغلي واتركه لمدة 3 دقائق.",
+          "إذا كنت ترغب في نكهة أقوى، اترك الكيس في الماء لمدة 4 دقائق."
+        ],
+        "poductSpecifications": [
+           {
+              "title": "الوزن الصافي",
+              "desc": "- 44g"
+          },
+          {
+              "title": "عدد الظروف",
+              "desc": "20"
+          },
+          {
+              "title": "النوع",
+              "desc": "مشروب ساخن"
+          },
+          {
+              "title": "center",
+              "desc": "center"
+          },
+          {
+              "title": "center",
+              "desc": "center"
+          },
+          {
+              "title": "center",
+              "desc": "center"
+          }
+        ]
+      }
+    },
+    "31": {
+      "name": "سابروسا",
+      "desc": "هذا نص عربي تجريبي يصف المنتج الثالث.",
+            "details":{
+        "descTitle": "الوصف",
+        "desc" : [
+          "يُعتبر مشروب الزهورات من أفضل المشروبات التي تحمي من نزلات البرد والإنفلونزا والسعال الذي يزداد في فصل الشتاء.",
+          "كما أنه يُساعد على طرد السموم من الجسم، ويقوي جهاز المناعة، ويُخفف الصداع، ويُزيل الانتفاخ، ويُساعد على الهضم."
+        ],
+        "IngredientsTitle": "المكونات",
+        "Ingredients": [
+          "ورد جوري",
+          "مليسة",
+          "نعنع فلفلي",
+          "متة",
+          "زهرة الربيع",
+          "بابونج",
+          "شاي أخضر"
+        ],
+        "usageInstructionsTitle": "طريقة التحضير",
+        "usageInstructions": [
+          "للحفاظ على نكهته المميزة، ضع كيسًا من الكامبو (زهورات طبيعية) في كوب سعة 250 مل، ثم صب الماء المغلي واتركه لمدة 3 دقائق.",
+          "إذا كنت ترغب في نكهة أقوى، اترك الكيس في الماء لمدة 4 دقائق."
+        ],
+        "poductSpecifications": [
+           {
+              "title": "الوزن الصافي",
+              "desc": "- 44g"
+          },
+          {
+              "title": "عدد الظروف",
+              "desc": "20"
+          },
+          {
+              "title": "النوع",
+              "desc": "مشروب ساخن"
+          },
+          {
+              "title": "center",
+              "desc": "center"
+          },
+          {
+              "title": "center",
+              "desc": "center"
+          },
+          {
+              "title": "center",
+              "desc": "center"
+          }
+        ]
+      }
+    },
+    "32": {
+      "name": "الصخرة",
+      "desc": "هذا نص عربي تجريبي يصف المنتج الثالث.",
+            "details":{
         "descTitle": "الوصف",
         "desc" : [
           "يُعتبر مشروب الزهورات من أفضل المشروبات التي تحمي من نزلات البرد والإنفلونزا والسعال الذي يزداد في فصل الشتاء.",
