change (logo + company) + mate benifit + quality section

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1,5 +1,5 @@
 {
-  "Logo" : "/kabbour/Navbar/Logo-ar.png",
+  "Logo" : "مجموعة كبور الدولية",
   "nav": {
     "home": "الرئيسية",
     "products": "منتجاتنا",
@@ -2094,5 +2094,20 @@
     "phase7": {
       "desc": "أضيفت القهوة إلى عائلة منتجات شركة كبور عام 2021."
     }
-  }
+  },
+  "MateBenifitTitle": "المتة",
+  "MateBenifit": {
+    "1": "تعزز جهاز المناعة بشكل عام",
+    "2": "خصائص خفض الكولسترول والمضادة للالتهابات",
+    "3": "كمية عالية من مضادات الأكسدة: حتى أكثر من الشاي الأخضر) والمنشطات والمواد المغذية",
+    "4": "تخفض كمية السكر في الدم",
+    "5": "تعزز عملية التمثيل الغذائي وبالتالي يدعم فقدان الوزن",
+    "6": "قد تساعد في حمايتك من أمراض القلب",
+    "7": "قد تساعد في منع العدوى من الفطريات والطفيليات والبكتيريا",
+    "8": "تعزز طاقتك، ويمنحك التركيز، ويحسن يقظتك",
+    "9": "تحتوي تقريباً على كل الفيتامينات والمعادن والأحماض الأمينية التي يحتاجها جسم الإنسان"
+  },
+  "expotTitle": "التوزيع والتصدير",
+  "exportDesc": "تصدر مجموعة كبور الدولية منتجاتها إلى مختلف المحافظات داخل سوريا وعدد من الدول حول العالم، حيث تملك شبكة توزيع قوية تشمل عدد من البلدان حول العالم"
+
 }
